<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SecondActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:onClick="onSettingsMenuClick"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_cat1"
        android:orderInCategory="100"
        android:title="@string/date_of_birth"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_cat2"
        android:orderInCategory="100"
        android:title="@string/place_of_birth"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_cat3"
        android:orderInCategory="100"
        android:title="@string/place_of_work"
        app:showAsAction="never"/>
</menu>
