<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/green_background_color"
    tools:context="leodevelopments.aboutme2.MainActivity"
    android:longClickable="false">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:contentDescription="@string/myPhotoMain"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:id="@+id/mp"
        android:src="@drawable/mp"
        android:layout_alignTop="@+id/section_label"
        android:visibility="visible"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/my_fio"
        android:id="@+id/textView_fio"
        android:gravity="center"
        android:shadowColor="@color/blue_color"
        android:layout_below="@+id/mp"
        android:layout_alignStart="@+id/mp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/my_email"
        android:id="@+id/textView_email"
        android:layout_alignEnd="@+id/textView_fio"
        android:gravity="center"
        android:layout_below="@+id/textView_fio"
        android:layout_alignStart="@+id/textView_fio" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="1000dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/arrayView"
        android:gravity="left"
        android:layout_alignTop="@drawable/mp"
        android:layout_toStartOf="@+id/mp"
        android:layout_above="@+id/textView_fio" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/primer_txt1"
        android:id="@+id/primer1"
        android:layout_below="@+id/arrayView"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/header_1"
        android:textColor="@color/yellow_color"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/primer_txt2"
        android:id="@+id/primer2"
        android:textSize="@dimen/header_2"
        android:textColor="@color/red_color"
        android:layout_below="@+id/primer1"
        android:layout_toEndOf="@+id/section_label" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/primer_txt3"
        android:id="@+id/primer3"
        android:textSize="@dimen/header_3"
        android:textColor="@color/blue_color"
        android:layout_below="@+id/primer2"
        android:layout_toEndOf="@+id/section_label" />

    <ImageView
        android:contentDescription="@string/buttonPicture"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:src="@drawable/andr"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/simple_text"
        android:id="@+id/simple_text"
        android:layout_below="@+id/primer3"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox1"
        android:id="@+id/checkBox"
        android:checked="true"
        android:layout_below="@+id/simple_text"
        android:layout_alignStart="@+id/textView_email" />

    <ImageButton
        android:contentDescription="@string/androidImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:src="@drawable/andr"
        android:layout_alignEnd="@+id/textView_email"
        android:scaleType="centerCrop"
        android:layout_alignTop="@+id/imageView" />

</RelativeLayout>
